--- a/staticServer/package.json
+++ b/staticServer/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "chalk": "^2.4.1"
+    "chalk": "^2.4.1",
+    "handlebars": "^4.0.11"
   },
   "devDependencies": {
     "eslint": "^5.4.0"
