--- a/staticServer/package.json
+++ b/staticServer/package.json
@@ -1,7 +1,15 @@
 {
+  "name": "anydoor",
+  "version": "0.1.1",
+  "description": "kimi nodejs web server",
+  "main": "app.js",
+  "bin": {
+    "anydoor": "bin/anydoor"
+  },
   "dependencies": {
     "chalk": "^2.4.1",
-    "handlebars": "^4.0.11"
+    "handlebars": "^4.0.11",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "eslint": "^5.4.0"
