--- a/staticServer/package.json
+++ b/staticServer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anydoor",
+  "name": "kimi_anydoor",
   "version": "0.1.1",
   "description": "kimi nodejs web server",
   "main": "app.js",
