--- a/koa/.vscode/launch.json
+++ b/koa/.vscode/launch.json
@@ -4,23 +4,12 @@
   // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "start app",
-      "program": "${workspaceFolder}/src/app.js"
-    },
-    {
-      "type": "node",
-      "request": "launch",
-      "name": "Launch Program",
-      "program": "${workspaceFolder}/src/commodity_manager.js"
-    },
+
     {
       "type": "node",
       "request": "launch",
       "name": "启动程序",
-      "program": "${file}"
+      "program": "${workspaceFolder}\\DbHelper\\db.js"
     }
   ]
 }
