--- a/koa/package.json
+++ b/koa/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.5.2"
+    "koa": "^2.5.2",
+    "mongodb": "^3.1.6"
   }
 }
