--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,12 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "node",
+      "request": "launch",
+      "name": "test node",
+      "program": "${file}"
+    },
+    {
       // 语言
       "type": "node",
       // 是调试模式，还是附着到已运行的程序上
